--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # images
+  assets:
+    - assets/images/pexels-robert-so-18127674-2.jpg
+    - assets/images/drawing_new.svg
+
+  # custom fonts
+  fonts:
+    - family: Social Monster
+      fonts:
+        - asset: assets/fonts/SocialMonsterNormal-Owjp.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
