--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,17 @@ flutter:
     - family: Social Monster
       fonts:
         - asset: assets/fonts/SocialMonsterNormal-Owjp.ttf
+    - family: Nunito
+      fonts: 
+        - asset: assets/fonts/Nunito-Regular.ttf
+        - asset: assets/fonts/Nunito-Italic.ttf
+          style: italic
+
+
+
+
+
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
