--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,9 @@ flutter:
     - family: Social Monster
       fonts:
         - asset: assets/fonts/SocialMonsterNormal-Owjp.ttf
+    - family: Sarpanch
+      fonts:
+      - asset: assets/fonts/Sarpanch-Regular.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
