--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  dio: ^5.3.2
+  freezed_annotation: ^2.4.1
+  retrofit: ^4.0.1
+  pretty_dio_logger: ^1.3.1
+  json_annotation: ^4.8.1
+  flutter_riverpod: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +54,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
+  json_serializable: ^6.7.1
+  retrofit_generator: ^7.0.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
