--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,13 @@ dependencies:
     sdk: flutter
   google_fonts: ^5.1.0
 
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
+  #mysql1: ^0.20.0
+
+  intl: ^0.17.0
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
