--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
     sdk: flutter
   google_fonts: ^5.1.0
 
+
   sqflite: ^2.0.0+3
   path: ^1.8.0
-  #mysql1: ^0.20.0
+  mysql1: ^0.20.0
 
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
