--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^5.1.0
+  google_fonts: ^6.1.0
 
   dropdown_button2: ^2.3.9
 
@@ -46,7 +46,11 @@ dependencies:
   json_annotation: ^4.8.1
   material: ^1.0.0+2
   flutter_riverpod: ^2.4.3
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
+  mysql1: ^0.20.0
   http: ^1.0.0
+  intl: ^0.18.1
 
 
 
@@ -63,7 +67,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   freezed: ^2.4.2
   json_serializable: ^6.7.1
-  retrofit_generator: ^7.0.8
+  retrofit_generator: ^8.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
