--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
-
   dropdown_button2: ^2.3.9
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,6 +49,7 @@ dependencies:
   mysql1: ^0.20.0
   http: ^1.0.0
   intl: ^0.18.1
+  shared_preferences: ^2.2.2
 
 
 
