--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.10",
@@ -19,5 +20,4 @@
     "mocha": "^10.2.0",
     "sinon": "^17.0.1"
   }
-  
 }
