--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
+    "jest": "^29.7.0",
     "mocha": "^10.2.0",
     "sinon": "^17.0.1"
   }
