--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,7 @@
     "chai-http": "^4.4.0",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
-    "sinon": "^17.0.1"
+    "sinon": "^17.0.1",
     "mysql": "^2.18.1"
 
   }
