--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "supertest": "^6.3.3"
@@ -20,7 +21,7 @@
     "chai-http": "^4.4.0",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
-    "sinon": "^17.0.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "sinon": "^17.0.1"
   }
 }
