--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  flutter_native_splash: ^2.3.4
+  
 
 dev_dependencies:
+    flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/e-icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/e-icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/e-icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/e-icon.png"
   flutter_test:
     sdk: flutter
-
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -64,6 +85,8 @@ flutter:
     - assets/images/pexels-robert-so-18127674-2.jpg
     - assets/images/drawing_new.svg
     - assets/images/eMission_logo.svg
+    - assets/images/launch_image.svg
+    - assets/images/splash.png
 
   # custom fonts
   fonts:
