--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   another_flushbar: ^1.12.30
   geolocator: ^10.1.0
   permission_handler: ^11.0.1
+  screenshot: ^2.1.0
 
 
 dev_dependencies:
