--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <application
         android:label="emission.dev"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_emission50x50">
         <activity
             android:name=".MainActivity"
             android:exported="true"
